--- a/Hugo/login.css
+++ b/Hugo/login.css
@@ -1,6 +1,8 @@
-body{background-color: dodgerblue;}
+body{background-color: royalblue;}
 
-.a{
-    height: 600px; 
-    background-color: azure;
-}
+.a{padding-left: 50px;}
+
+h1{text-align: center; background: white; color: royalblue; }
+
+h2{text-align: center;border:1px solid black;margin: 10px;
+    padding: 10px;}
